--- a/Test/common/build.gradle
+++ b/Test/common/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -36,6 +35,6 @@ dependencies {
     compile 'com.umeng.sdk:analytics:7.4.4'
     //https://github.com/wasabeef/Blurry
     compile 'jp.wasabeef:blurry:2.1.1'
-    implementation 'com.google.code.gson:gson:2.7'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support.constraint:constraint-layout:1.1.2'
 }
